[gd_scene load_steps=14 format=3 uid="uid://cymg334voypfl"]

[ext_resource type="Texture2D" uid="uid://cr13pbrnmy3qa" path="res://assets/park_bg.png" id="1_17stf"]
[ext_resource type="Texture2D" uid="uid://c0nqfdpdn0v6e" path="res://assets/chat.png" id="1_7880o"]
[ext_resource type="Script" uid="uid://cng3tm8c656s8" path="res://scripts/day_scene.gd" id="1_bqe03"]
[ext_resource type="Texture2D" uid="uid://bdiu4o8iryxr0" path="res://assets/npc_head.png" id="1_iobdm"]
[ext_resource type="Texture2D" uid="uid://cdtoyv6ttaoh3" path="res://assets/player_head.png" id="2_7880o"]
[ext_resource type="FontFile" uid="uid://dvtgrbtapn7q4" path="res://assets/Black Pixel.ttf" id="6_lu5c5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7880o"]
texture = ExtResource("1_17stf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17stf"]
bg_color = Color(0.278888, 0.160011, 4.81308e-08, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_17stf"]
texture = ExtResource("1_iobdm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_akhj3"]
texture = ExtResource("2_7880o")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lu5c5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqe03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gf760"]

[node name="DayScene" type="CanvasLayer"]
script = ExtResource("1_bqe03")

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7880o")

[node name="dialog_bg" type="Panel" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -359.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_17stf")

[node name="NpcBubble" type="TextureRect" parent="."]
modulate = Color(0.585261, 0.313178, 0, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -401.0
offset_top = -1226.0
offset_right = 1351.0
offset_bottom = -272.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_7880o")
expand_mode = 1
flip_h = true

[node name="NpcText" type="Label" parent="NpcBubble"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -390.0
offset_top = -605.0
offset_right = 460.0
offset_bottom = -392.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_lu5c5")
theme_override_font_sizes/font_size = 29
text = "Hmmmmmm..."
autowrap_mode = 3
clip_text = true

[node name="NPC" type="Panel" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -588.0
offset_top = -811.0
offset_right = -16.0
offset_bottom = -280.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_17stf")

[node name="Player" type="Panel" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -538.0
offset_right = 577.0
offset_bottom = 48.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_akhj3")

[node name="UserBubble" type="TextureRect" parent="."]
modulate = Color(0.585261, 0.313178, 0, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = -874.0
offset_right = 1888.0
offset_bottom = 80.0
grow_vertical = 0
texture = ExtResource("1_7880o")
expand_mode = 1

[node name="PromptTextEdit" type="TextEdit" parent="UserBubble"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 450.0
offset_top = -632.0
offset_right = 1252.0
offset_bottom = -352.0
grow_vertical = 0
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_lu5c5")
theme_override_font_sizes/font_size = 49
theme_override_styles/normal = SubResource("StyleBoxTexture_lu5c5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqe03")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_gf760")
placeholder_text = "Type Here..."
